force-app/main/default/objects/SCOC__LCREntity__c/SCOC__LCREntity__c.object-meta.xml
<CustomObject>
    <description>Liquid Credit Response Entities List</description>
    <label>LCREntity</label>
    <nameField>
        <displayFormat>LCRE-{00000}</displayFormat>
        <label>Liquid Credit Response Entity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCREntities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>