force-app/main/default/objects/SCOC__LCREntity__c/fields/SCOC__Account__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Account record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LCREntity</relationshipLabel>
    <relationshipName>LCREntity</relationshipName>
    <type>Lookup</type>
</CustomField>