force-app/main/default/objects/SCOC__LCREntity__c/fields/SCOC__jointFlag__c.field-meta.xml
<CustomField>
    <fullName>SCOC__jointFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the entity is joint on another report.</description>
    <label>Joint Flag</label>
    <type>Checkbox</type>
</CustomField>