force-app/main/default/objects/SCOC__LCREntity__c/fields/SCOC__LCResponse__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LCResponse__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated Liquid Credit Response.</description>
    <label>Liquid Credit Response</label>
    <referenceTo>SCOC__LCResponse__c</referenceTo>
    <relationshipLabel>Liquid Credit Responses Entities</relationshipLabel>
    <relationshipName>LCREntity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>