force-app/main/default/objects/SCOC__LCREntity__c/fields/SCOC__ol_cb_score_cutoff__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ol_cb_score_cutoff__c</fullName>
    <description>This field contains the Online CB Score Cutoff for the Liquid Credit Request.</description>
    <label>Online CB Score Cutoff</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>