force-app/main/default/objects/SCOC__LCREntity__c/fields/SCOC__PrincipalReportId__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PrincipalReportId__c</fullName>
    <description>This field is optional. When the record type is set to SBSS7 - Consumer, it should be populated with the expected picklist value.</description>
    <label>Principal Report Id</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOTAPPLICABLE</fullName>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>RPTID01</fullName>
            </value>
            <value>
                <fullName>RPTID02</fullName>
            </value>
            <value>
                <fullName>RPTID03</fullName>
            </value>
            <value>
                <fullName>RPTID04</fullName>
            </value>
            <value>
                <fullName>RPTID05</fullName>
            </value>
            <value>
                <fullName>RPTID06</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>