force-app/main/default/objects/SCOC__LCREntity__c/fields/SCOC__scoring_model_suite_type__c.field-meta.xml
<CustomField>
    <fullName>SCOC__scoring_model_suite_type__c</fullName>
    <description>This field contains the scoring model suite type submitted in the Liquid Credit Request for this entity.</description>
    <label>Scoring Model Suite Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>