force-app/main/default/objects/SCOC__LCREntity__c/fields/SCOC__xref_id__c.field-meta.xml
<CustomField>
    <fullName>SCOC__xref_id__c</fullName>
    <description>This field contains the cross reference id submitted in the Liquid Credit Request for this entity.</description>
    <label>XRef Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>