force-app/main/default/objects/SCOC__LCREntity__c/recordTypes/SCOC__SBSS7_Consumer.recordType-meta.xml
<RecordType>
    <fullName>SCOC__SBSS7_Consumer</fullName>
    <active>true</active>
    <description>Choose SBSS7 - Consumer if you want this record to represent a consumer entity.</description>
    <label>SBSS7 - Consumer</label>
</RecordType>